[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdiutils"
version = "0.2.0"
description = "A Python package for (Bragg) Coherent X-ray Diffraction Imaging processing, analysis and visualisation workflows."

authors = [
    { name = "Clement Atlan", email = "clement.atlan@esrf.fr" },
    { name = "Corentin Chatelier" },
    { name = "David Simonne" },
    { name = "Matthieu Deschamps" },
    { name = "Kyle Olson" },
]
maintainers = [
    {name = "Clement Atlan", email = "clement.atlan@esrf.fr"}
]
requires-python = ">=3.10"
readme = "README.md"
keywords = [
    "reconstruction",
    "coherent X-ray imaging",
    "Bragg",
    "pipeline",
    "synchrotron radiation",
    "quantitative analysis",
]
license = {file = "LICENSE"}

dependencies = [
    "colorcet>=3.0.0",
    "h5py>=3.6.0",
    "hdf5plugin>=3.2.0",
    "ipykernel",
    "matplotlib>=3.8",
    "numpy",
    "pandas>=1.4.2",
    "scikit-image>=0.19.2",
    "scikit-learn>=1.1.3",
    "scipy>=1.8.0",
    "seaborn>=0.12.1",
    "silx",
    "tabulate",
    "xrayutilities>=1.7.3",
    "ipyvolume",
    "ipython_genutils",
    "bokeh",
    "panel",
    "tornado",
]

[project.optional-dependencies]
vtk = ["vtk>=9.0.1"]

[project.urls]
Homepage = "https://github.com/clatlan/cdiutils"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cdiutils" = [
    "pipeline/pynx-id01-cdi_template.slurm",
    "templates/bcdi_pipeline.ipynb",
    "templates/step_by_step_bcdi_analysis.ipynb",
    "templates/detector_calibration.ipynb"
]


[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
extend-include = ["*.ipynb"]


[project.scripts]
prepare_bcdi_notebooks = "cdiutils.scripts.prepare_bcdi_notebooks:main"
prepare_detector_calibration = "cdiutils.scripts.prepare_detector_calibration:main"


