[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdiutils"
version = "0.2.0"
description = "A Python package for (Bragg) Coherent X-ray Diffraction Imaging processing, analysis and visualisation workflows."

authors = [
    { name = "Clement Atlan", email = "clement.atlan@esrf.fr" },
    { name = "David Simonne" },
    { name = "Corentin Chatelier" },
    { name = "Kyle Olson" },
    { name = "Matthieu Deschamps" },
]
maintainers = [
    {name = "Clement Atlan", email = "clement.atlan@esrf.fr"}
]
requires-python = ">=3.10"
readme = "README.md"
keywords = [
    "reconstruction",
    "coherent X-ray imaging",
    "Bragg",
    "pipeline",
    "synchrotron radiation",
    "quantitative analysis",
]
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    "colorcet>=3.0.0",
    "h5py>=3.6.0", 
    "hdf5plugin>=3.2.0",
    "matplotlib>=3.8",
    "numpy",
    "pandas>=1.4.2",
    "scikit-image>=0.19.2",
    "scikit-learn>=1.1.3",
    "scipy>=1.8.0",
    "silx",
    "tabulate",
    "xrayutilities>=1.7.3",
]

[project.optional-dependencies]
vtk = ["vtk>=9.0.1"]
interactive = [
    "ipywidgets",
    "ipyvolume", 
    "bokeh",
    "panel",
    "tornado",
    "tables",
    "h5glance",
    "ipykernel",
]
docs = [
    "sphinx>=4.0",
    "pydata-sphinx-theme",
]
all = [
    "vtk>=9.0.1",
    "ipywidgets",
    "ipyvolume",
    "bokeh", 
    "panel",
    "tornado",
    "tables",
    "h5glance",
    "ipykernel",
    "sphinx>=4.0",
    "pydata-sphinx-theme",
]

[project.urls]
Homepage = "https://github.com/clatlan/cdiutils"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cdiutils" = [
    "pipeline/pynx-id01-cdi_template.slurm",
    "templates/bcdi_pipeline.ipynb",
    "templates/step_by_step_bcdi_analysis.ipynb",
    "templates/detector_calibration.ipynb"
]


[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
extend-include = ["*.ipynb"]


[project.scripts]
prepare_bcdi_notebooks = "cdiutils.scripts.prepare_bcdi_notebooks:main"
prepare_detector_calibration = "cdiutils.scripts.prepare_detector_calibration:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
